fix box spacing on custom fields

--- a/apps/desktop/src/scss/vault.scss
+++ b/apps/desktop/src/scss/vault.scss
@@ -77,7 +77,7 @@ app-root {
       margin: 30px auto 0 auto;
 
       &:first-child {
-        margin-top: 10px;
+        margin-top: 30px;
       }
 
       &:last-child {
